# rust-web-scraping

./: .gitignore  Cargo.toml  README.md
src/: main.rs  scrape-binance.rs  scrape-coinbase.rs  scrape-so.rs
