[package]
name = "rust-scrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.23"
tokio = { version = "1", features = ["full"] }
scraper = "0.18.1"
thirtyfour = "0.31.0"
regex = "1.5.4"